# primerio-tech-interview

./: .flake8  README.md
assignment/src/: common.py  dependencies.py
assignment/src/router/: payments.py  tokenization.py
assignment/src/service/: tokenization.py
implementation/: .gitignore  Makefile  pyproject.toml
implementation/src/router/: payments.py
implementation/src/service/: payments.py
src/: app.py  common.py  dependencies.py
src/adapters/: achilles_processor_adapter.py  base.py  midas_processor_adapter.py
src/service/: tokenization.py
tests/api/: test_payment_authorization.py  test_tokenization.py
