[tool.poetry]
name = "backend-challenge"
version = "0.1.0"
description = ""
authors = ["Primer <developers@primer.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = {extras = ["httpx"], version = "^0.110.2"}
uvicorn = "^0.29.0"
pytest = "^8.1.1"
requests = "^2.31.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_return_any = true
disallow_untyped_defs = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
